Fix invisible picker and webpack migration

--- a/css/style.scss
+++ b/css/style.scss
@@ -105,6 +105,7 @@ input.input-inline {
 		.colorselect {
 			div, label {
 				height: 32px;
+				width: auto;
 			}
 		}
 		form {
